--- a/single-spa-demo/src/index.ejs
+++ b/single-spa-demo/src/index.ejs
@@ -5,11 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Root Config</title>
-  <!-- 
-    This CSP allows any SSL-enabled host, but you should limit these directives further to increase your app's security.
-    Learn more about CSP policies at https://content-security-policy.com/#directive
-  -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
   <meta name="importmap-type" content="systemjs-importmap" />
   <!-- Add your organization's prod import map URL to this script's src  -->
   <script type="systemjs-importmap" src="/importmap.json"></script>
@@ -19,7 +14,7 @@
       "imports": {
         "@thomas/root-config": "//localhost:9000/thomas-root-config.js",
         "@thomas/react-app": "//localhost:9001/thomas-react-app.js",
-        "@thomas/vue-app": "//localhost:9002/main.js"
+        "@thomas/vue-app": "//localhost:9002/js/app.js"
       }
     }
   </script>
