mf run ok with svelte
Signed-off-by: thomas <iam@tangkunyin.com>

--- a/single-spa-demo/src/index.ejs
+++ b/single-spa-demo/src/index.ejs
@@ -14,7 +14,8 @@
       "imports": {
         "@thomas/root-config": "//localhost:9000/thomas-root-config.js",
         "@thomas/react-app": "//localhost:9001/thomas-react-app.js",
-        "@thomas/vue-app": "//localhost:9002/js/app.js"
+        "@thomas/vue-app": "//localhost:9002/js/app.js",
+        "@thomas/svelte-app": "//localhost:9003/build/bundle.js"
       }
     }
   </script>
