update svelte default tips
Signed-off-by: thomas <iam@tangkunyin.com>

--- a/single-spa-demo/src/index.ejs
+++ b/single-spa-demo/src/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Root Config</title>
+  <title>Single Spa App</title>
   <meta name="importmap-type" content="systemjs-importmap" />
   <!-- Add your organization's prod import map URL to this script's src  -->
   <script type="systemjs-importmap" src="/importmap.json"></script>
