--- a/standard-projects/react-demo/src/App.css
+++ b/standard-projects/react-demo/src/App.css
@@ -24,6 +24,12 @@
   color: white;
 }
 
+.App-nav a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
 .App-link {
   color: #61dafb;
 }
